--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     app:cardCornerRadius="16dp"
-    android:padding="20dp"
+    android:padding="10dp"
     android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -17,13 +18,11 @@
 
                 <TextView
                     android:id="@+id/textName"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_margin="7dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="@drawable/circle_shape"
                     android:backgroundTint="?attr/colorPrimary"
                     android:gravity="center"
-                    android:padding="10dp"
                     android:text="C"
                     android:textColor="@color/white"
                     android:textSize="28sp"
@@ -34,9 +33,8 @@
 
                 <ImageView
                     android:id="@+id/contactImage"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_margin="7dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="@drawable/circle_shape"
                     android:clipToOutline="true"
                     android:scaleType="centerCrop"
@@ -52,11 +50,46 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:ellipsize="end"
-                    android:maxLines="2"
+                    android:maxLines="1"
                     android:text="Contact Name"
                     android:textSize="28sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textName"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/mobile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:layout_marginStart="20dp"
+                    android:text="Mobile"
+                    android:textSize="22sp"
+                    app:layout_constraintStart_toEndOf="@+id/textName"
+                    app:layout_constraintTop_toBottomOf="@+id/contactName" />
+
+                <TextView
+                    android:id="@+id/mobileNumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:layout_marginStart="10dp"
+                    android:text="+91232143912"
+                    android:textSize="22sp"
+                    app:layout_constraintStart_toEndOf="@+id/mobile"
+                    app:layout_constraintTop_toBottomOf="@+id/contactName" />
+
+                <ImageButton
+                    android:id="@+id/callButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:background="@drawable/make_call_button_drawable"
+                    android:padding="10dp"
+                    android:src="@drawable/call_24px"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
