--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,39 +7,64 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+   <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            app:layout_behavior="com.google.android.material.search.SearchBar$ScrollingViewBehavior"
+            android:layout_height="wrap_content"
+       android:layout_marginTop="?attr/actionBarSize"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            tools:layout_editor_absoluteX="0dp" />
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/materialToolbar"
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_margin="10dp"
-        android:layout_height="50dp"
-        android:background="@drawable/search_bar_background"
-        android:backgroundTint="?attr/colorControlHighlight"
-        app:menu="@menu/searchbar_menu"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
-
-        <SearchView
-            android:id="@+id/searchbar"
+        <com.google.android.material.search.SearchBar
+            android:id="@+id/searchBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="?attr/colorControlHighlight"
-            android:iconifiedByDefault="false"
-            android:queryBackground="@android:color/transparent"
-            android:queryHint="Search Contacts"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:hint="@string/search_contacts"
+            app:forceDefaultNavigationOnClickListener="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:menu="@menu/searchbar_menu"
+            tools:layout_editor_absoluteX="16dp" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-    </com.google.android.material.appbar.MaterialToolbar>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_marginTop="10dp"
+    <com.google.android.material.search.SearchView
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_height="match_parent"
+        app:layout_anchor="@id/searchBar">
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/searchRecyclerView"/>
+    </com.google.android.material.search.SearchView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--<com.google.android.material.appbar.MaterialToolbar-->
+<!--android:id="@+id/materialToolbar"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_margin="10dp"-->
+<!--android:layout_height="50dp"-->
+<!--android:background="@drawable/search_bar_background"-->
+<!--android:backgroundTint="?attr/colorControlHighlight"-->
+<!--app:menu="@menu/searchbar_menu"-->
+<!--app:layout_constraintTop_toTopOf="parent">-->
 
+<!--<SearchView-->
+<!--    android:id="@+id/searchbar"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:backgroundTint="?attr/colorControlHighlight"-->
+<!--    android:iconifiedByDefault="false"-->
+<!--    android:queryBackground="@android:color/transparent"-->
+<!--    android:queryHint="Search Contacts"-->
+<!--    app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--</com.google.android.material.appbar.MaterialToolbar>-->
