--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -22,10 +22,12 @@
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/createContact">
 
-            <ImageButton
+            <ImageView
                 android:id="@+id/addPictureImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:clipToOutline="true"
+                android:scaleType="centerCrop"
                 android:layout_gravity="center"
                 android:background="@drawable/circle_ripple"
                 android:padding="30dp"
