--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,6 +42,7 @@
         android:contentDescription="@string/add_contact"
         app:icon="@drawable/baseline_add_24"
         android:text="Add Contact"
+        android:transitionName="openAddNoteFragment"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="40dp" />
     <com.google.android.material.search.SearchView
