--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -25,6 +25,7 @@
 
             <ImageView
                 android:id="@+id/addPictureImage"
+                android:contentDescription="@string/add_picture"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:clipToOutline="true"
@@ -41,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
-                android:text="Add Picture"
+                android:text="@string/add_picture"
                 android:textColor="?attr/colorSecondary"
                 android:textStyle="bold"
                 app:rippleColor="?attr/colorControlHighlight" />
@@ -67,7 +68,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
-                    android:text="Save" />
+                    android:text="@string/save" />
             </com.google.android.material.appbar.MaterialToolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
