--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -10,7 +10,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="10dp"
+            android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +53,7 @@
                     android:maxLines="1"
                     android:text="Contact Name"
                     android:textSize="28sp"
+                    app:layout_constraintBottom_toTopOf="@+id/mobile"
                     app:layout_constraintStart_toEndOf="@+id/textName"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,23 +61,24 @@
                     android:id="@+id/mobile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:layout_marginStart="20dp"
                     android:text="Mobile"
                     android:textSize="22sp"
-                    app:layout_constraintStart_toEndOf="@+id/textName"
-                    app:layout_constraintTop_toBottomOf="@+id/contactName" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/textName" />
 
                 <TextView
                     android:id="@+id/mobileNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:layout_marginStart="10dp"
                     android:text="+91232143912"
                     android:textSize="22sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/mobile"
                     app:layout_constraintTop_toBottomOf="@+id/contactName" />
 
