--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -99,8 +99,8 @@
                     android:id="@+id/firstName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="text"
-                    android:hint="First Name" />
+                    android:hint="First Name"
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
@@ -124,9 +124,9 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/lastName"
                     android:layout_width="match_parent"
-                    android:inputType="text"
                     android:layout_height="match_parent"
-                    android:hint="Surname" />
+                    android:hint="Surname"
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
@@ -168,7 +168,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompany">
@@ -194,10 +193,21 @@
                     android:inputType="phone"
                     android:hint="Phone" />
             </com.google.android.material.textfield.TextInputLayout>
+            <ImageButton
+                android:id="@+id/clearPhone"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center|top"
+                android:layout_marginStart="-40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/make_call_button_drawable"
+                android:src="@drawable/close_24px"
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayoutEmail"
+            android:id="@+id/labelPhoneNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -205,6 +215,65 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayoutPhone">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayout"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayoutPhone">
+
+                <AutoCompleteTextView
+                    android:id="@+id/phoneNumberLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:hint="@string/label"
+                    app:simpleItems="@array/phoneNumberLabel"
+                    android:inputType="none" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/labelEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingBottom="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail">
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayoutPhone">
+
+                <AutoCompleteTextView
+                    android:id="@+id/emailLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:hint="@string/label"
+                    android:inputType="none"
+                    app:simpleItems="@array/emailLabel" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/labelPhoneNumber">
 
             <ImageView
                 android:layout_width="30dp"
@@ -224,21 +293,30 @@
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textEmailAddress"
-                    android:hint="Email" />
+                    android:hint="Email"
+                    android:inputType="textEmailAddress" />
             </com.google.android.material.textfield.TextInputLayout>
+            <ImageButton
+                android:id="@+id/clearEmail"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center|top"
+                android:layout_marginStart="-40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/make_call_button_drawable"
+                android:src="@drawable/close_24px"
+                android:visibility="invisible" />
         </LinearLayout>
-
 
         <LinearLayout
             android:id="@+id/linearLayoutBirthdayDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail">
+            app:layout_constraintTop_toBottomOf="@+id/labelEmail">
 
             <ImageView
                 android:layout_width="30dp"
@@ -259,19 +337,49 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:focusable="false"
-                    android:hint="Birthday" />
+                    android:hint="Significant Date" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <ImageButton
                 android:id="@+id/clearBirthdayDate"
-                android:visibility="invisible"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center|top"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="-40dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
+                android:background="@drawable/make_call_button_drawable"
                 android:src="@drawable/close_24px"
-                android:background="@drawable/make_call_button_drawable"/>
+                android:visibility="invisible" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/labelSignificantDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingBottom="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayoutBirthdayDate">
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayoutPhone">
+
+                <AutoCompleteTextView
+                    android:id="@+id/significantDateLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:hint="@string/label"
+                    android:inputType="none"
+                    app:simpleItems="@array/dateLabel" />
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
